Fix bug in PaintOpBuffer folding alpha optimization

PaintOpBuffer tries to fold together saveLayer/draw/restore into a
single draw-with-alpha, however it was doing this in cases that it
shouldn't.  If the external saveLayer had an alpha of 255, then it would
believe that it was always a noop.  However, if the draw op had some
blend mode or image filter (and thus didn't support folding) then it's
not safe to consider this saveLayer a noop.

Fix by reordering the conditionals so that if the draw op doesn't
support then PaintOpBuffer goes down the normal no folding raster path.

Bug: 748485
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I0eeea49f3348aecda137860231a78b0075993834
Reviewed-on: https://chromium-review.googlesource.com/585633
Reviewed-by: Vladimir Levin <vmpstr@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489494}
Former-commit-id: 23681aaf9e05a6db8f10f072f0db8c03e9334e6f